--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "irazasyed/telegram-bot-sdk": "^3.14",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "mcamara/laravel-localization": "^2.2",
         "spatie/laravel-translatable": "^6.8",
+        "twilio/sdk": "^8.3",
         "yajra/laravel-datatables": "^11.0"
     },
     "require-dev": {
