--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "irazasyed/telegram-bot-sdk": "^3.14",
+        "jubaer/zoom-laravel": "^1.3",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "mcamara/laravel-localization": "^2.2",
