--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "irazasyed/telegram-bot-sdk": "^3.14",
         "jubaer/zoom-laravel": "^1.3",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "mcamara/laravel-localization": "^2.3",
         "spatie/laravel-translatable": "^6.8",
