--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "mcamara/laravel-localization": "^2.3",
         "spatie/laravel-translatable": "^6.8",
         "twilio/sdk": "^8.3",
